# QTQuick-learn

./: .gitignore  README.md
chapter1/pinwheel/: pinwheel.qml  pinwheel.qmlproject
chapter2/2-10-keys/: 2-10-keys.qml  2-10-keys.qmlproject
chapter2/2-1SyntaxDemo/: 2-1SyntaxDemo.qml  2-1SyntaxDemo.qmlproject
chapter2/2-2Property/: 2-2Property.qml  2-2Property.qmlproject
chapter2/2-3Script/: 2-3Script.qml  2-3Script.qmlproject
chapter2/2-4-Rectangle/: 2-4-Rectangle.qml  2-4-Rectangle.qmlproject
chapter2/2-5-Image/: 2-5-Image.qml  2-5-Image.qmlproject
chapter2/2-6-mousearea/: 2-6-mousearea.qml  2-6-mousearea.qmlproject
chapter2/2-7-component/: 2-7-component.qml  2-7-component.qmlproject  Button.qml
chapter2/2-8-transformations/: 2-8-transformations.qml  2-8-transformations.qmlproject  ClickableImage.qml
chapter2/2-9-input/: 2-9-input.qml  2-9-input.qmlproject  TLineEditV1.qml
chapter2/2-9-position/: 2-9-position.qml  2-9-position.qmlproject  BlueSquare.qml  BrightSquare.qml  DarkSquare.qml  GreenSquare.qml  RedSquare.qml
chapter3/3-1-animation/: 3-1-animation.qml  3-1-animation.qmlproject
chapter3/3-football/: 3-football.qml  3-football.qmlproject
chapter3/3-group_animation/: 3-group_animation.qml  3-group_animation.qmlproject  ClickableImageV3.qml
chapter3/3-light/: 3-light.qml  3-light.qmlproject
chapter3/animationV2/: ClickableImageV2.qml  animationV2.qml  animationV2.qmlproject
chapter3/easying/: EasingType.qml  easying.qml  easying.qmlproject
chapter4/ch4-desktop_app/: CMakeLists.txt  Main.qml  main.cpp
chapter4/ch4-mobile_app/: CMakeLists.txt  Main.qml  main.cpp
chapter4/ch4-share_app/: CMakeLists.txt  ImageViewerWindow.qml  Main.qml  main.cpp
chapter4/ch4-share_app/+android/: Main.qml
chapter4/document-windows/: CMakeLists.txt  DocumentWindow.qml  Main.qml  main.cpp
chapter4/imagine/: CMakeLists.txt  Main.qml  main.cpp  qtquickcontrols2.conf
chapter4/nested-screen/: CMakeLists.txt  Home.qml  Main.qml  Profile.qml  main.cpp
chapter4/sidebyside-screen/: About.qml  CMakeLists.txt  EditProfile.qml  Main.qml  Profile.qml  main.cpp
